# klingon-assistant-v2

./: .gitmodules  Cargo.toml  README.md
kla-parser/: Cargo.toml
kla-parser-lib/: Cargo.toml  build.rs
kla-parser-lib/src/: confidence.rs  dictionary.rs  lib.rs  morphology.rs  output.rs  sentence.rs  types.rs
kla-parser-lib/tests/: corpus_test.rs  regression_test.rs
kla-parser/src/: main.rs
