[package]
name = "kla-parser-lib"
version = "0.1.0"
edition = "2021"
description = "Klingon morphological parser library"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
